adds styling to pages. adds the ability to delete records

--- a/views/shops/new.ejs
+++ b/views/shops/new.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>donut-tychoon</title>
   </head>
   <body>
-    <h1>All the shops!</h1>
+    <h1>Create a new shop</h1>
+    <form class="pure-form" action="/shops" method="post">
+    <input type="text" class="pure-input-rounded" value='' placeholder="name" name='name'>
+    <input type="text" class="pure-input-rounded" value='' placeholder="city" name='city'>
+    <button type="submit" class="pure-button" name="submit">Submit</button>
+  </form>
+
+
+
+    <!--
     <form class="create" action="/shops" method="post">
       <div>
         <label>Name:</label>
@@ -16,8 +26,6 @@
         <input value='' name='city'>
       </div>
       <input type="submit" name='Submit'>
-    </form>
-    <ul>
-    </ul>
+    </form> -->
   </body>
 </html>
