--- a/views/shops/index.ejs
+++ b/views/shops/index.ejs
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>donut-tychoon</title>
   </head>
   <body>
     <h1>All the shops!</h1>
     <a href="/shops/new">Create a shop!</a>
-    </form>
     <ul>
       <% shop.forEach( (shop) => {  %>
         <li>
-        <a href="/shops/<%=shop.id%>">
         <b><%= shop.name %></b>
         <i><%= shop.city %></i>
-        </a>
-        <p><a href="/shops/<%=shop.id%>/edit">edit</a></p>
+        <a href="/shops/<%=shop.id%>">
+        <p><button type="submit" class="pure-button" name="view">view</button></a>
+        <a href="/shops/<%=shop.id%>/edit"><button type="submit" class="pure-button" name="edit">edit</button></a>
+
+        <form method="POST" action="/shops/<%=shop.id%>?_method=DELETE">
+          <button type="submit" class="pure-button">delete</button>
+        </form>
+      </p>
+        <!-- <a href="/<%=shop.id%>?_method=DELETE"><button type="submit" class="pure-button" name="delete">delete</button></a></p> -->
+
+
+
+        <p>
         </li>
       <% }) %>
     </ul>
