--- a/views/shops/show.ejs
+++ b/views/shops/show.ejs
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>donut-tychoon</title>
   </head>
   <body>
     <h1>Check out this shop!</h1>
-
     <ul>
       <% shop.forEach( (shop) => {  %>
-        <li>
         <%= shop.name %>
         <%= shop.city %>
-        <%= shop.id %>
-        </li>
+        <p><i>Shop ID:</i> <%= shop.id %></p>
+
       <% }) %>
     </ul>
+    <p>
+    <a href="/shops"><button type="submit" class="pure-button" name="view">All Shops</button></a>
+  </p>
   </body>
 </html>
