adds new shop_donut table

--- a/views/donuts/index.ejs
+++ b/views/donuts/index.ejs
@@ -8,27 +8,29 @@
 </head>
 
 <body>
-  <h1>All the donuts!</h1>
+  <h1>All the donuts!</h1><img class="pure-img" src="https://www.shareicon.net/download/2017/04/22/885117_food.ico">
+  <br>
   <a href="/donuts/new">Create a donut!</a> or check out <a href="/shops">donut shops</a>
   <ul>
     <% donuts.forEach( (donuts) => {  %>
       <li>
         <b><%= donuts.name %></b>
         <i><%= donuts.topping %></i>
-        <i><%= donuts.price %></i>
-        <a href="/donuts/<%=donuts.id%>">
-          <p><button type="submit" class="pure-button" name="view">view</button></a>
-        <a href="/donuts/<%=donuts.id%>/edit"><button type="submit" class="pure-button" name="edit">edit</button></a>
+        <p>price:
+          <%= donuts.price %>
+            <a href="/donuts/<%=donuts.id%>">
+              <p><button type="submit" class="pure-button" name="view">view</button></a>
+            <a href="/donuts/<%=donuts.id%>/edit"><button type="submit" class="pure-button" name="edit">edit</button></a>
 
-        <form method="POST" action="/donuts/<%=donuts.id%>?_method=DELETE">
-          <button type="submit" class="pure-button">delete</button>
-        </form>
-        </p>
-        <!-- <a href="/<%=donuts.id%>?_method=DELETE"><button type="submit" class="pure-button" name="delete">delete</button></a></p> -->
+            <form method="POST" action="/donuts/<%=donuts.id%>?_method=DELETE">
+              <button type="submit" class="pure-button">delete</button>
+            </form>
+            </p>
+            <!-- <a href="/<%=donuts.id%>?_method=DELETE"><button type="submit" class="pure-button" name="delete">delete</button></a></p> -->
 
 
 
-        <p>
+            <p>
       </li>
       <% }) %>
   </ul>
