--- a/views/shops/index.ejs
+++ b/views/shops/index.ejs
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-  <h1>All the shops!</h1>
+  <h1>All the shops!</h1><img class="pure-img" src="https://www.shareicon.net/download/2017/04/22/885117_food.ico">
+  <br>
   <a href="/shops/new">Create a shop!</a> or check out <a href="/donuts">individual donuts</a>
   <ul>
     <% shop.forEach( (shop) => {  %>
