--- a/views/donuts/show.ejs
+++ b/views/donuts/show.ejs
@@ -6,12 +6,12 @@
     <title>donut-tychoon</title>
   </head>
   <body>
-    <h1>Check out this donuts!</h1>
+    <h1>Check out this donut!</h1>
     <ul>
       <% donuts.forEach( (donuts) => {  %>
         <%= donuts.name %>
         <%= donuts.topping %>
-        <%= donuts.price %>
+        <p>price: <%= donuts.price %></p>
         <p><i>donuts ID:</i> <%= donuts.id %></p>
 
       <% }) %>
